feat: 更新默认规则, 添加单爆锁定

--- a/rules.yaml
+++ b/rules.yaml
@@ -63,8 +63,17 @@
 - description: 锁定5星带双爆的初始圣遗物
   expression: |-
     星级 == 5
-    && 等级 <= 8
+    && 等级 == 0
+    && 副词条个数 == 4
     && ((暴击率 > 0 && 暴击伤害 > 0) || (主:暴击率 > 0 && 暴击伤害 > 0) || (暴击率 > 0 && 主:暴击伤害 > 0))
+  action: 锁定
+
+- description: 锁定5星3词条带暴击的初始圣遗物
+  expression: |-
+    星级 == 5
+    && 等级 == 0
+    && 副词条个数 == 3
+    && (暴击率 > 0 || 暴击伤害 > 0 || 主:暴击率 > 0 || 主:暴击伤害 > 0)
   action: 锁定
 
 - description: 锁定5星非理之冠双爆得分大于等于30的圣遗物
