--- a/metadata/Cargo.toml
+++ b/metadata/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.99"
 common = { version = "0.1.0", path = "../common" }
+lazy_static = "1.5.0"
 schemars = "1.0.4"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
