--- a/metadata/Cargo.toml
+++ b/metadata/Cargo.toml
@@ -11,3 +11,4 @@ schemars = "1.0.4"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 serde_yaml = "0.9.34"
+tracing = "0.1"
